# EnergyDemandPrediction

./: .gitignore  README.md  pyproject.toml
data/raw/: Consumo_horario_2021_04.parquet  Consumo_horario_2021_06.parquet  Consumo_horario_2021_07.parquet  Consumo_horario_2021_08.parquet  Consumo_horario_2021_09.parquet  Consumo_horario_2021_10.parquet  Consumo_horario_2021_11.parquet  Consumo_horario_2021_12.parquet  Consumo_horario_2021_3.parquet  Consumo_horario_2021_5.parquet  Consumo_horario_2022_01.parquet  Consumo_horario_2022_02.parquet  Consumo_horario_2022_03.parquet  Consumo_horario_2022_04.parquet  Consumo_horario_2022_05.parquet  Consumo_horario_2022_06.parquet  Consumo_horario_2022_07.parquet  Consumo_horario_2022_08.parquet  Consumo_horario_2022_09.parquet  Consumo_horario_2022_10.parquet  Consumo_horario_2022_11.parquet  Consumo_horario_2022_12.parquet  Consumo_horario_2023_01.parquet  Consumo_horario_2023_02.parquet  Consumo_horario_2023_03.parquet  Consumo_horario_2023_04.parquet  Consumo_horario_2023_05.parquet  Consumo_horario_2023_06.parquet  Consumo_horario_2023_07.parquet  Consumo_horario_2023_08.parquet
docs/: business-problem.md  ml-canvas.md  project-structure.md
notebooks/: Importando_e_Gravando_no_GCS_com_DuckDB.ipynb  eda_forecast.ipynb
