[tool.poetry]
name = "energyforecast-mlops"
version = "0.1.0"
description = ""
authors = ["wagnerjorge <wagnerjorgesilva@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.9.1"
scikit-learn = "^1.3.2"
pandas = "2.1"
unidecode = "^1.3.7"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
pyarrow = "^13.0.0"
jupysql = "^0.10.2"
statsmodels = "^0.14.0"
plotly = "^5.18.0"
pmdarima = "^2.0.4"
pymannkendall = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
